--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "valid-url": "^1.0.9",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
